--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             </div>    
 
-            <div id="listaActividades" class="col-md-8">  
+            <div id="listaActividades" class="col-md-8 columna-dos">  
             </div>
 
         </div>
