--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
                         <div class="card-body" action="">
 
                             <div class="mb-3">
-                                <input class="form-control"  placeholder="Nombre" type="text">
+                                <input class="form-control"   placeholder="Nombre" type="text">
                             </div>
                             
                             <div class="mb-3">
-                                <input class="form-control" placeholder="Fecha" type="date">
+                                <input class="form-control" value="" type="date">
                             </div>
                             
                             <div class="mb-3">
-                                <input class="form-control" placeholder="Tipo" type="text" maxlength="2" >
+                                <input class="form-control"  placeholder="Tipo" type="text" maxlength="2" >
                             </div>
 
                             <div class="mb-3">
-                                <input class="form-control" placeholder="Pass" type="text">
+                                <input class="form-control"  placeholder="Pass" type="text">
                             </div>
 
                             <div class="mb-3">
-                                <input class="form-control" placeholder="Email" type="text">
+                                <input class="form-control"  placeholder="Email" type="text">
                             </div>
 
                             <div class="mb-3" >
